--- a/rpahel mwangi code-html.html
+++ b/rpahel mwangi code-html.html
@@ -3,12 +3,12 @@
     <head>
         <title>Electrical Products</title>
         <link rel="stylesheet" href="">
-        <style>
-        </style>
+        <style></style>
         </head>
         <body>
             <h1>Electrical Products</h1>
             <p>We sell all types of Electrical Products</p>
+            <form method="post" action=""></form>
             <fieldset>
                 <label for="First name">Enter you first name:
                     <input type="text" name="" id="" placeholder="First name" required/>
@@ -36,12 +36,12 @@
             </fieldset>
             <fieldset>
                 <label for="">
-                    <input type="checkbox" name="" id=""> <a href="https://www.youtube.com"><Accept:terms></Accept:terms></a>
+                    <input type="checkbox" name="" id=""> <a href="https://www.youtube.com">Accept:terms
                 </label>
             </fieldset>
             <fieldset>
                 <label for="Profile-Pitcure">
-                    <input type="text" name="" id="">
+                    <input type="file" name="" id="">
                 </label>
             </fieldset>
             <fieldset>
@@ -60,14 +60,15 @@
                         <option value="">select one</option>
                         <option value="2">1.ccu</option>
                         <option value="3">2.blubs</option>
-                        <option value="4">3.wire cables</option>
-                        <option value="5">4.socket</option>
+                        <option value="4">3.socket</option>
+                        </select>
                 </label>
             </fieldset>
             <fieldset>
                 <label for="user-bio">user-bio
-                    <textarea name="user-bio" id="user-bio" cols="40" rows="20"></textarea>
+                    <textarea name="user-bio" id="user-bio" cols="30" rows="10"></textarea>
                 </label>
             </fieldset>
+            <input type="submit" value="submit">
         </body>
 </html>
